k8s/apps/internal/snipeit/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snipeit
  namespace: snipeit
spec:
  selector:
    app: snipeit
  ports:
    - port: 80
      targetPort: 80
