k8s/apps/internal/snipeit/local-only-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: snipeit
  namespace: snipeit
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/href: "https://snipeit.local.opryga.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Snipe IT"
    gethomepage.dev/description: "Asset management system"
    gethomepage.dev/group: "Extras"
    gethomepage.dev/icon: "nodejs.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`snipeit.local.opryga.com`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        # - name: jpdesigns-admin-basicauth
        #   namespace: jpdesigns
        # - name: default-headers
        #   namespace: traefik
        - name: local-ip-list
          namespace: traefik
        - name: oauth-forward-auth
          namespace: traefik
        - name: oauth-headers
          namespace: traefik
        # - name: crowdsec-bouncer
        #   namespace: traefik
      services:
        - name: snipeit
          port: 80
  tls:
    secretName: local-opryga-com-tls # give it the ole tls cert

---
# Authenticated requests to /oauth2/ will be forwarded to the oauth-proxy service
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth-proxy-path
  namespace: snipeit
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure # or websecure for HTTPS
  routes:
    - match: Host(`snipeit.local.opryga.com`) && PathPrefix(`/oauth2/`) # Replace with your domain
      kind: Rule
      services:
        - name: oauth-proxy
          port: 4180
      # middlewares:
      #   - name: crowdsec-bouncer
      #     namespace: traefik
  # Uncomment and configure for HTTPS
  tls:
    secretName: local-opryga-com-tls
---
# add externalName service for oauth-proxy
apiVersion: v1
kind: Service
metadata:
  name: oauth-proxy
  namespace: snipeit
spec:
  type: ExternalName
  externalName: oauth-proxy.ms-sso.svc.cluster.local
  ports:
    - name: http
      port: 4180
      targetPort: 4180
